feat: connect calendar windows and publish report detail design v2.1.2
